--- a/index.html
+++ b/index.html
@@ -4,15 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <script src='./script.js'></script>
     <script>
         
         const root = div(
-            [   
+            [   nav(
+                'Hii Xd',
+                [{
+                    link: 'xyz',
+                    name: 'xyz'
+                },{
+                    link: 'abc',
+                    name: 'abc'
+                }], ''),
                 div('hello', 'xd'),
-                div('hii'),
+                div([
+                    form([
+                        input('xD', 'text', ''),
+                        span('hii', 'text-muted'),
+                        input('xD', 'text', ''),
+                        input('xD', 'password', ''),
+                        button('Submit', ['btn-danger', 'ml-2'])
+                        ], '/xD', 'POST')
+                ], ''),
                 h1('xD')
             ]
         )
