Minor bug fixes

--- a/sample.html
+++ b/sample.html
@@ -249,19 +249,19 @@ form{
 
         const root = div([   
             nav({
-                name: 'ShreyaLib',
+                name: 'ShreyaPens',
                 links: [
                     {
                         link: '/about',
                         name: 'About Us'
                     },
                     {
-                        link: '/login',
-                        name: 'LogIn'
+                        link: '/contact',
+                        name: 'Contact Us'
                     },
                     {
-                        link: '/sighUp',
-                        name: 'SignUp',
+                        link: '/login',
+                        name: 'LogIn',
                     },
                 ]
             }, {
