--- a/sample/sample.html
+++ b/sample/sample.html
@@ -187,7 +187,7 @@ form{
 </style>
 <body>
 
-    <script src='./quark.js'></script>
+    <script src='https://shreyanshshri.github.io/quark/quark.js'></script>
     <script>
                 
 function Nav(){
